hdparm-9.48:
	- fix bugs from devslp patch.
hdparm-9.47:
	- added devslp patch (IDENTIFY word 76) from David Woodhouse.
	- help and manpage fixes from Michal Minar.
hdparm-9.46:
	- fix compilation with "musl libc".
	- added "hex:aabbcc.." for binary security passwords.
	- return EIO when read_big_block() fails
	- use llabs() rather than abs() in identify.c
hdparm-9.45:
	- fixed blocksize handling in fibmap code to use result from FIGETBSZ in more places (Anton Altaparmakov).
	- fixed divide by zero exception in geom.c
	- tidying up formatting in sgio.c
hdparm-9.44:
	- changed reg_flags struct to more closely match kernel definition (Lucas Magasweran).
	- added fwdownload mode "E" support (Rusty Carruth).
	- fix timeouts for security-erase (again!)
	- change display of security "supported" to handle ambiguous reporting from drives
	- don't rely upon C-library for byte-swapping
	- added --dco-setmax support, courtesy of Geoff Papilion.
hdparm-9.43
	- rearrange flag execution so that the idle/standby/sleep "now" flags are executed last.
hdparm-9.42
	- fix ordering of -S -y flags
	- spelling, typo, and formatting fixes for manpage and others
	- set block-count to 1 for Security commands sent via SAT (sgio)
	- use FIGETBSZ to determine filesystem block size for fibmap -- needed for FAT
	- fix master password revcode handling
	- try and fix reg_flags (again!) for old IDE taskfile ioctls
	- fixed '&&' bug in dco_identify code
	- force sector dumps (read-sector, identify, ..) to use le16 output format
hdparm-9.41
	- proper SCT identify info courtesy of Leonid Evdokimov <leon@darkk.net.ru>
	- updated raid1ext4trim.sh-1.5 script
hdparm-9.40
	- avoid HDIO_GETGEO_BIG when possible (doesn't exist in linux-2.6.xx and beyond)
	- pad secure erase timeouts by 30minutes rather than 5minutes.
hdparm-9.39
	- added -R flag to control Read-Write-Verify feature, courtesy of Gordan Bobic
	- nuked leftover sgio.c.orig file
hdparm-9.38