@@ -2,7 +2,7 @@
  * hdparm.c - Command line interface to get/set hard disk parameters.
  *          - by Mark Lord (C) 1994-2012 -- freely distributable.
  */
-#define HDPARM_VERSION "v9.49"
+#define HDPARM_VERSION "v9.48"
 
 #define _LARGEFILE64_SOURCE /*for lseek64*/
 #define _BSD_SOURCE	/* for strtoll() */
@@ -95,24 +95,6 @@ static int do_dco_freeze = 0, do_dco_restore = 0, do_dco_identify = 0, do_dco_se
 static unsigned int security_command = ATA_OP_SECURITY_UNLOCK;
 
 static char security_password[33], *fwpath;
-
-static int do_sanitize = 0;
-static __u16 sanitize_feature = 0;
-static __u32 ow_pattern = 0;
-static const char *sanitize_states_str[SANITIZE_STATE_NUMBER] = {
-	"SD0 Sanitize Idle",
-	"SD1 Sanitize Frozen",
-	"SD2 Sanitize operation In Process",
-	"SD3 Sanitize Operation Failed",
-	"SD4 Sanitize Operation succeeded"
-};
-static const char *sanitize_err_reason_str[SANITIZE_ERR_NUMBER] = {
-	"Reason not reported",
-	"Command unsuccessful",
-	"Unsupported command",
-	"Device in FROZEN state",
-	"Antifreeze lock enabled"
-};
 
 static int get_powermode  = 0, set_powermode = 0;
 static int set_apmmode = 0, get_apmmode= 0, apmmode = 0;
@@ -780,142 +762,6 @@ static unsigned int get_erase_timeout_secs (int fd, int enhanced)
 	// Return the larger value between timeout and estimate
 	return (timeout < estimate) ? estimate: timeout;
 }
-static int
-get_sanitize_state(__u8 nsect)
-{
-	int state = SANITIZE_IDLE_STATE_SD0;
-	if (nsect & SANITIZE_FLAG_DEVICE_IN_FROZEN) {
-		state = SANITIZE_FROZEN_STATE_SD1;
-	} else if (nsect & SANITIZE_FLAG_OPERATION_IN_PROGRESS) {
-		state = SANITIZE_OPERATION_IN_PROGRESS_SD2;
-	} else if (!(nsect & SANITIZE_FLAG_OPERATION_SUCCEEDED)) {
-		state = SANITIZE_OPERATION_FAILED_SD3;
-	}
-	return state;
-}
-
-static void
-sanitize_normal_output(int sanitize_state, struct hdio_taskfile * r)
-{
-	printf("    State:    %s\n", sanitize_states_str[sanitize_state]);
-	if (sanitize_state == SANITIZE_OPERATION_IN_PROGRESS_SD2) {
-		int progress = (r->lob.lbam << 8) | r->lob.lbal;
-		int percent = (progress == 0xFFFF) ? (100) : ((100 * (progress + 1)) / 0xFFFF);
-		printf("    Progress: 0x%x (%d%%)\n", progress, percent);
-	}
-	if (r->hob.nsect & SANITIZE_FLAG_ANTIFREEZE_BIT)
-		printf("    Antifreeze bit set\n");
-}
-
-static void
-sanitize_error_output(struct hdio_taskfile * r)
-{
-	int err_reason = (r->lob.lbal >= SANITIZE_ERR_NUMBER) ? (SANITIZE_ERR_NO_REASON) : (r->lob.lbal);
-	fprintf(stderr, "SANITIZE device error reason: %s\n", sanitize_err_reason_str[err_reason]);
-}
-
-static void
-do_sanitize_cmd (int fd)
-{
-	int err = 0;
-	__u64 lba = 0;
-	const char *description;
-	int sanitize_state;
-	struct hdio_taskfile r;
-
-	get_identify_data(fd);
-	if (!id)
-		exit(EIO);
-	if (id[59] & 0x1000) {
-
-		switch (sanitize_feature) {
-			case SANITIZE_STATUS_EXT:
-				description = "SANITIZE_STATUS";
-				break;
-			case SANITIZE_CRYPTO_SCRAMBLE_EXT:
-				lba = SANITIZE_CRYPTO_SCRAMBLR_KEY;
-				description = "SANITIZE_CRYPTO_SCRAMBLE";
-				break;
-			case SANITIZE_BLOCK_ERASE_EXT:
-				lba = SANITIZE_BLOCK_ERASE_KEY;
-				description = "SANITIZE_BLOCK_ERASE";
-				break;
-			case SANITIZE_OVERWRITE_EXT:
-				lba = ((__u64)(SANITIZE_OVERWRITE_KEY) << 32) | ow_pattern;
-				description = "SANITIZE_OVERWRITE";
-				break;
-			case SANITIZE_FREEZE_LOCK_EXT:
-				lba = SANITIZE_FREEZE_LOCK_KEY;
-				description = "SANITIZE_FREEZE_LOCK";
-				break;
-			case SANITIZE_ANTIFREEZE_LOCK_EXT:
-				lba = SANITIZE_ANTIFREEZE_LOCK_KEY;
-				description = "SANITIZE_ANTIFREEZE_LOCK";
-				break;
-			default:
-				fprintf(stderr, "BUG in do_sanitize_cmd(), feat=0x%x\n", sanitize_feature);
-				exit(EINVAL);
-		}
-
-		memset(&r, 0, sizeof(r));
-		r.cmd_req = TASKFILE_CMD_REQ_NODATA;
-		r.dphase  = TASKFILE_DPHASE_NONE;
-
-		r.oflags.bits.lob.dev     = 1;
-		r.oflags.bits.lob.command = 1;
-		r.oflags.bits.lob.feat    = 1;
-		r.oflags.bits.lob.lbal    = 1;
-		r.oflags.bits.lob.lbam    = 1;
-		r.oflags.bits.lob.lbah    = 1;
-		r.oflags.bits.hob.lbal    = 1;
-		r.oflags.bits.hob.lbam    = 1;
-		r.oflags.bits.hob.lbah    = 1;
-
-		r.lob.dev     = 0x40;
-		r.lob.command = ATA_OP_SANITIZE;
-		r.lob.feat    = sanitize_feature;
-		r.lob.lbal    = lba;
-		r.lob.lbam    = lba >>  8;
-		r.lob.lbah    = lba >> 16;
-		r.hob.lbal    = lba >> 24;
-		r.hob.lbam    = lba >> 32;
-		r.hob.lbah    = lba >> 40;
-
-		r.iflags.bits.lob.lbal    = 1;
-		r.iflags.bits.lob.lbam    = 1;
-		r.iflags.bits.hob.nsect   = 1;
-
-		printf("Issuing %s command\n", description);
-		if (do_taskfile_cmd(fd, &r, 10)) {
-			err = errno;
-			perror("SANITIZE failed");
-			sanitize_error_output(&r);
-		}
-		else {
-			switch (sanitize_feature) {
-				case SANITIZE_STATUS_EXT:
-					printf("Sanitize status:\n");
-					sanitize_state = get_sanitize_state(r.hob.nsect);
-					sanitize_normal_output(sanitize_state, &r);
-					break;
-				case SANITIZE_BLOCK_ERASE_EXT:
-				case SANITIZE_OVERWRITE_EXT:
-				case SANITIZE_CRYPTO_SCRAMBLE_EXT:
-					printf("Operation started in background\n");
-					printf("You may use `--sanitize-status` to check progress\n");
-					break;
-				default:
-					//nothing here
-					break;
-			}
-		}
-	} else {
-		fprintf(stderr, "SANITIZE feature set is not supported\n");
-		exit(EINVAL);
-	}
-	if (err)
-		exit(err);
-}
 
 static void
 do_set_security (int fd)
@@ -938,7 +784,7 @@ do_set_security (int fd)
 	r->obytes	= 512;
 	r->lob.command	= security_command;
 	r->oflags.bits.lob.nsect = 1;
-	r->lob.nsect    = 1;
+	r->lob.nsect        = 1;
 	data		= (__u8*)r->data;
 	data[0]		= security_master & 0x01;
 	memcpy(data+2, security_password, 32);
@@ -1292,58 +1138,64 @@ static __u64 do_get_native_max_sectors (int fd)
 	r.iflags.bits.lob.lbah     = 1;
 	r.lob.dev = 0x40;
 
-	if((id[80]&0x400)==0x400) { //ACS3 supported
+	if((id[80]&0x400)==0x400){
+	//ACS3 supported
 		if (((id[83] & 0xc400) == 0x4400) && (id[86] & 0x0400)) {
-			r.iflags.bits.hob.lbal 	= 1;
-			r.iflags.bits.hob.lbam 	= 1;
-			r.iflags.bits.hob.lbah	= 1;
-			r.lob.command = ATA_OP_GET_NATIVE_MAX_EXT;
-			if (do_taskfile_cmd(fd, &r, 10)) {
-				err = errno;
-				perror (" READ_NATIVE_MAX_ADDRESS_EXT failed");
-			} else {
-				if (verbose)
+		r.iflags.bits.hob.lbal 	= 1;
+		r.iflags.bits.hob.lbam 	= 1;
+		r.iflags.bits.hob.lbah	= 1;
+		r.lob.command = ATA_OP_GET_NATIVE_MAX_EXT;
+
+		if (do_taskfile_cmd(fd, &r, 10)) {
+			err = errno;
+			perror (" READ_NATIVE_MAX_ADDRESS_EXT failed");
+		} else {
+			if (verbose)
 					printf("READ_NATIVE_MAX_ADDRESS_EXT response: hob={%02x %02x %02x} lob={%02x %02x %02x}\n",
 						r.hob.lbah, r.hob.lbam, r.hob.lbal, r.lob.lbah, r.lob.lbam, r.lob.lbal);
-				max = (((__u64)((r.hob.lbah << 16) | (r.hob.lbam << 8) | r.hob.lbal) << 24)
-					 | ((r.lob.lbah << 16) | (r.lob.lbam << 8) | r.lob.lbal)) + 1;
-			}
-		} else {
-			r.iflags.bits.lob.dev = 1;
-			r.lob.command = ATA_OP_GET_NATIVE_MAX_EXT;
-			if (do_taskfile_cmd(fd, &r, timeout_15secs)) {
-				err = errno;
-				perror (" READ_NATIVE_MAX_ADDRESS failed");
-			} else {
-				max = ((r.lob.lbah << 16) | (r.lob.lbam << 8) | r.lob.lbal) + 1;
-			}
-		}	
-	} else { //ACS2 supported	
-		if (((id[83] & 0xc400) == 0x4400) && (id[86] & 0x0400)) {
-			r.iflags.bits.hob.lbal  = 1;
-			r.iflags.bits.hob.lbam  = 1;
-			r.iflags.bits.hob.lbah  = 1;
-			r.lob.command = ATA_OP_READ_NATIVE_MAX_EXT;
-			if (do_taskfile_cmd(fd, &r, 10)) {
-				err = errno;
-				perror (" READ_NATIVE_MAX_ADDRESS_EXT failed");
-			} else {
-				if (verbose)
-					printf("READ_NATIVE_MAX_ADDRESS_EXT response: hob={%02x %02x %02x} lob={%02x %02x %02x}\n",
-						r.hob.lbah, r.hob.lbam, r.hob.lbal, r.lob.lbah, r.lob.lbam, r.lob.lbal);
-				max = (((__u64)((r.hob.lbah << 16) | (r.hob.lbam << 8) | r.hob.lbal) << 24)
-				     	| ((r.lob.lbah << 16) | (r.lob.lbam << 8) | r.lob.lbal)) + 1;
-			}
-		} else {
-			r.iflags.bits.lob.dev = 1;
-			r.lob.command = ATA_OP_READ_NATIVE_MAX;
-			if (do_taskfile_cmd(fd, &r, 0)) {
-				err = errno;
-				perror (" READ_NATIVE_MAX_ADDRESS failed");
-			} else {
-				max = (((r.lob.dev & 0x0f) << 24) | (r.lob.lbah << 16) | (r.lob.lbam << 8) | r.lob.lbal) + 1;
-			}
+					max = (((__u64)((r.hob.lbah << 16) | (r.hob.lbam << 8) | r.hob.lbal) << 24)
+						 | ((r.lob.lbah << 16) | (r.lob.lbam << 8) | r.lob.lbal)) + 1;
 		}
+	} else {
+		r.iflags.bits.lob.dev = 1;
+		r.lob.command = ATA_OP_GET_NATIVE_MAX_EXT;
+		if (do_taskfile_cmd(fd, &r, timeout_15secs)) {
+			err = errno;
+			perror (" READ_NATIVE_MAX_ADDRESS failed");
+		} else {
+			max = ((r.lob.lbah << 16) | (r.lob.lbam << 8) | r.lob.lbal) + 1;
+		}
+		
+	}	
+
+	} else {
+	//ACS2 supported	
+	if (((id[83] & 0xc400) == 0x4400) && (id[86] & 0x0400)) {
+		r.iflags.bits.hob.lbal  = 1;
+		r.iflags.bits.hob.lbam  = 1;
+		r.iflags.bits.hob.lbah  = 1;
+		r.lob.command = ATA_OP_READ_NATIVE_MAX_EXT;
+		if (do_taskfile_cmd(fd, &r, 10)) {
+			err = errno;
+			perror (" READ_NATIVE_MAX_ADDRESS_EXT failed");
+		} else {
+			if (verbose)
+				printf("READ_NATIVE_MAX_ADDRESS_EXT response: hob={%02x %02x %02x} lob={%02x %02x %02x}\n",
+					r.hob.lbah, r.hob.lbam, r.hob.lbal, r.lob.lbah, r.lob.lbam, r.lob.lbal);
+			max = (((__u64)((r.hob.lbah << 16) | (r.hob.lbam << 8) | r.hob.lbal) << 24)
+				     | ((r.lob.lbah << 16) | (r.lob.lbam << 8) | r.lob.lbal)) + 1;
+		}
+	} else {
+		r.iflags.bits.lob.dev = 1;
+		r.lob.command = ATA_OP_READ_NATIVE_MAX;
+		if (do_taskfile_cmd(fd, &r, 0)) {
+			err = errno;
+			perror (" READ_NATIVE_MAX_ADDRESS failed");
+		} else {
+			max = (((r.lob.dev & 0x0f) << 24) | (r.lob.lbah << 16) | (r.lob.lbam << 8) | r.lob.lbal) + 1;
+		}
+	}
+
 	}
 	errno = err;
 	return max;
@@ -1828,17 +1680,11 @@ static void usage_help (int clue, int rc)
 	" --prefer-ata12    Use 12-byte (instead of 16-byte) SAT commands when possible\n"
 	" --read-sector     Read and dump (in hex) a sector directly from the media\n"
 	" --repair-sector   Alias for the --write-sector option (VERY DANGEROUS)\n"
-	" --sanitize-antifreeze-lock  Block sanitize-freeze-lock command until next power cycle\n"
-	" --sanitize-block-erase      Start block erase operation\n"
-	" --sanitize-crypto-scramble  Change the internal encryption keys that used for used data\n"
-	" --sanitize-freeze-lock      Lock drive's sanitize features until next power cycle\n"
-	" --sanitize-overwrite  PATTERN  Overwrite the internal media with constant PATTERN\n"
-	" --sanitize-status           Show sanitize status information\n"
-	" --security-help             Display help for ATA security commands\n"
+	" --security-help   Display help for ATA security commands\n"
 	" --trim-sector-ranges        Tell SSD firmware to discard unneeded data sectors: lba:count ..\n"
 	" --trim-sector-ranges-stdin  Same as above, but reads lba:count pairs from stdin\n"
-	" --verbose                   Display extra diagnostics from some commands\n"
-	" --write-sector              Repair/overwrite a (possibly bad) sector directly on the media (VERY DANGEROUS)\n"
+	" --verbose         Display extra diagnostics from some commands\n"
+	" --write-sector    Repair/overwrite a (possibly bad) sector directly on the media (VERY DANGEROUS)\n"
 	"\n");
 	exit(rc);
 }
@@ -2200,12 +2046,6 @@ void process_dev (char *devname)
 	}
 	if (set_security) {
 		do_set_security(fd);
-	}
-	if (do_sanitize) {
-		if (do_sanitize > 1) {
-			confirm_i_know_what_i_am_doing("--sanitize", "This sanitize command destroys all user data.");
-		}
-		do_sanitize_cmd(fd);
 	}
 	if (do_dco_identify) {
 		__u16 *dco = get_dco_identify_data(fd, 0);
@@ -2852,34 +2692,6 @@ static void get_security_password (int handle_NULL)
 		++argp;
 }
 
-static void get_ow_pattern (void)
-{
-	unsigned int maxlen = sizeof(ow_pattern);
-
-	argp = *argv++, --argc;
-	if (!argp || argc < 1) {
-		fprintf(stderr, "missing PATTERN\n");
-		exit(EINVAL);
-	}
-	if (0 == strncmp(argp, "hex:", 4)) {
-		argp += 4;
-		if (strlen(argp) != (maxlen * 2)) {
-			fprintf(stderr, "invalid PATTERN length (hex string must be exactly %d chars)\n", maxlen*2);
-			exit(EINVAL);
-		}
-		int i = 28;
-		ow_pattern = 0;
-		while (*argp) {
-			ow_pattern |= fromhex(*argp++) << i;
-			i -= 4;
-		}
-
-	} else {
-		fprintf(stderr, "invalid PATTERN format (must be hex:XXXXXXXX)\n");
-		exit(EINVAL);
-	}
-}
-
 static const char *lba_emsg = "bad/missing sector value";
 static const char *count_emsg = "bad/missing sector count";
 static const __u64 lba_limit = (1ULL << 48) - 1;
@@ -2981,27 +2793,7 @@ handle_standalone_longarg (char *name)
 		enhanced_erase = 1;
 		security_command = ATA_OP_SECURITY_ERASE_UNIT;
 		get_security_password(1);
-	} else if (0 == strcasecmp(name, "sanitize-status")) {
-		do_sanitize = 1;
-		sanitize_feature = SANITIZE_STATUS_EXT;
-	} else if (0 == strcasecmp(name, "sanitize-freeze-lock")) {
-		do_sanitize = 1;
-		sanitize_feature = SANITIZE_FREEZE_LOCK_EXT;
-	} else if (0 == strcasecmp(name, "sanitize-antifreeze-lock")) {
-		do_sanitize = 1;
-		sanitize_feature = SANITIZE_ANTIFREEZE_LOCK_EXT;
-	} else if (0 == strcasecmp(name, "sanitize-block-erase")) {
-		do_sanitize = 2;
-		sanitize_feature = SANITIZE_BLOCK_ERASE_EXT;
-	} else if (0 == strcasecmp(name, "sanitize-crypto-scramble")) {
-		do_sanitize = 2;
-		sanitize_feature = SANITIZE_CRYPTO_SCRAMBLE_EXT;
-	} else if (0 == strcasecmp(name, "sanitize-overwrite")) {
-		do_sanitize = 2;
-		get_ow_pattern();
-		sanitize_feature = SANITIZE_OVERWRITE_EXT;
-	}
-	else {
+	} else {
 		usage_help(3,EINVAL);
 	}
 }
@@ -3263,7 +3055,6 @@ int main (int _argc, char **_argv)
 				case GET_SET_PARM('W',"write-cache",wcache,0,1);
 				case     SET_FLAG('y',standbynow);
 				case     SET_FLAG('Y',sleepnow);
-
 				case     SET_FLAG('z',reread_partn);
 				case     SET_FLAG('Z',seagate);
 
