@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	9.48
-Entered-date:	2015-06-14
+Version:	9.49
+Entered-date:	2016-10-17
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.49 bugfixes and ACS-3 enhancements.
 		v9.48 fix devslp bugs
 		v9.47 devslp reporting support
 		v9.46 added "hex:xxxxxxxx" format for binary security passwords; misc small fixes
@@ -122,7 +123,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		130K hdparm-9.48.tar.gz
+		158K hdparm-9.49.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux
 Copying-policy:	BSD License
