@@ -30,10 +30,9 @@ enum {
 	ATA_OP_PIDENTIFY		= 0xa1,
 	ATA_OP_READ_NATIVE_MAX		= 0xf8,
 	ATA_OP_READ_NATIVE_MAX_EXT	= 0x27,
-	ATA_OP_GET_NATIVE_MAX_EXT	= 0x78,
+	ATA_OP_GET_NATIVE_MAX_EXT = 0x78,
 	ATA_OP_SMART			= 0xb0,
 	ATA_OP_DCO			= 0xb1,
-	ATA_OP_SANITIZE			= 0xb4,
 	ATA_OP_ERASE_SECTORS		= 0xc0,
 	ATA_OP_READ_DMA			= 0xc8,
 	ATA_OP_WRITE_DMA		= 0xca,
