@@ -1,3 +1,8 @@
+hdparm-9.49:
+	- add ACS-3 overprovisioning support, courtesy of Intel.
+	- fix bug in display of security section and use updated erase-time values from ACS-3, courtesy of Patrick Higgins.
+	- increase timeout on fwdownload to 2 minutes, courtesy of Rusy Carruth.
+	- fix bugs from devslp patch.
 hdparm-9.48:
 	- fix bugs from devslp patch.
 hdparm-9.47:
